applications/echo-service/manifests/001-echo-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: echo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
      app.kubernetes.io/component: echo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
        app.kubernetes.io/component: echo
    spec:
      containers:
        - image: hashicorp/http-echo:1.0.0
          name: echo
          args:
            - -text="hello world"
          ports:
            - containerPort: 5678
              name: http
          resources:
            requests:
              cpu: 5m
              memory: 12Mi
            limits:
              cpu: 100m
              memory: 32Mi
