applications/echo-service/manifests/003-echo-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: echo
  annotations: # TODO: ingress annotations
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: 127.0.0.1
spec:
  rules:
    # TODO: add host to route traffic to the echo service
    - host: echo.demo.cluster.classroom.hochschule-burgenland.muehlbachler.xyz
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
