applications/echo-service/manifests/005-echo-httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: echo
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: 178.63.69.250,2a01:4f8:121:14e2:100:3:3:2
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: echo
spec:
  parentRefs:
    - name: echo-listener
      kind: ListenerSet
      group: gateway.networking.k8s.io
      sectionName: https-echo
  hostnames:
    - echo.demo.cluster.classroom.hochschule-burgenland.muehlbachler.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo
          port: 80
